--- a/www/css/index.css
+++ b/www/css/index.css
@@ -28,6 +28,10 @@ body {
     padding: 2%;
 }
 
+.form-generator {
+    margin-top: 1rem;
+}
+
 
 /* Landscape layout (with min-width) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
