divided index.js into modules, used services for db operations

--- a/platforms/android/app/src/main/assets/www/views/formbuilder.html
+++ b/platforms/android/app/src/main/assets/www/views/formbuilder.html
@@ -1,11 +1,11 @@
-<!-- <div class="view-wrapper">
+<div class="view-wrapper">
 	<form id="controlBuilder" name="controlbuilder" ng-submit="submitToFormView()" novalidate>
 		<div class="input-field">
 			<input id="controllerName" type="text" ng-model="ctrlName" class="validate">
 			<label for="controllerName">Controller Name</label>
 		</div>
 		<div class="input-field">
-			<select name="singleSelect" ng-model="data.singleSelect">
+			<select name="singleSelect" id="singleSelect" ng-model="data.singleSelect">
 				<option value="" disabled selected>Choose your option</option>
 				<option value="text">Text</option>
 				<option value="textarea">TextArea</option>
@@ -13,10 +13,17 @@
 				<option value="email">Email</option>
 				<option value="number">Number</option>
 			</select>
-			<label>Controller Type</label>
+			<label for="singleSelect">Controller Type</label>
 		</div>
-		<button type="submit" class="btn waves-effect">Add to Form View</button>
+		<button type="submit" class="btn waves-effect" ng-click="generateViewBuilder=true">Add to Form View</button>
+		<button class="btn waves-effect" ng-click="generateViewBuilder=false">Clear Form View</button>
 	</form>
 
-	<button class="btn waves-effect" ng-click="generateForm()" ui-sref="formviewer">Generate Form</button>
-</div> -->
+	<form id="viewBuilder" ng-show="generateViewBuilder" novalidate>
+		<div class="input-field" ng-repeat="data in dbData" ng-switch on="data.Type">
+			<textarea name="{{data.Name}}" id="{{data.Name}}" cols="30" rows="10" ng-switch-when="textarea"></textarea>
+			<input id="{{data.Name}}" type="{{data.Type}}" class="validate" ng-switch-default>
+			<label for="{{data.Name}}">{{data.Name}}</label>
+		</div>
+	</form>
+</div>
