--- a/platforms/android/app/src/main/assets/www/views/header.html
+++ b/platforms/android/app/src/main/assets/www/views/header.html
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
 	<div class="nav-wrapper">
 		<a href="#!" class="brand-logo">Builder</a>
 		<a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -16,4 +16,4 @@
 	<li><a href="badges.html">Components</a></li>
 	<li><a href="collapsible.html">Javascript</a></li>
 	<li><a href="mobile.html">Mobile</a></li>
-</ul>
+</ul> -->
