--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,5 +1,6 @@
 :root{
     --button-color__primary:#26a69a;
+    --button-color__danger:#ff000096;
 }
 
 * {
@@ -30,6 +31,11 @@ body {
 
 .view-wrapper {
     padding: 2%;
+    position:relative;
+    /* min-height:95%; */
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .form-generator {
@@ -118,4 +124,14 @@ body {
 
 .select-modal-wrapper{
     display:flex;
+}
+
+.button-container{
+    margin-top:3%;
+    position:relative;
+    bottom:5px;
+}
+.delete-database{
+    background-color:var(--button-color__danger) !important;
+    width:50%;
 }
