--- a/platforms/android/app/src/main/assets/www/views/formviewer.html
+++ b/platforms/android/app/src/main/assets/www/views/formviewer.html
@@ -1,7 +1,11 @@
-<!-- <form id="viewBuilder" novalidate>
+<form id="viewBuilder" ng-submit="submitForm()" novalidate>
 	<div class="input-field" ng-repeat="data in dbData" ng-switch on="data.Type">
-		<textarea name="{{data.Name}}" id="{{data.Name}}" cols="30" rows="5" ng-switch-when="textarea"></textarea>
+		<textarea name="{{data.Name}}" id="{{data.Name}}" cols="30" rows="10" ng-switch-when="textarea"></textarea>
+		<select name="{{data.Name}}" id="{{data.Name}}" ng-switch-when="select">
+			<option value="{{options}}" ng-repeat="options in data.SelectValues">{{options}}</option>
+		</select>
 		<input id="{{data.Name}}" type="{{data.Type}}" class="validate" ng-switch-default>
 		<label for="{{data.Name}}">{{data.Name}}</label>
 	</div>
-</form> -->
+	<button class="btn waves effect" type="submit">Submit</button>
+</form>
