--- a/www/css/index.css
+++ b/www/css/index.css
@@ -135,3 +135,17 @@ body {
     background-color:var(--button-color__danger) !important;
     width:50%;
 }
+
+#viewBuilder .input-field >*{
+    margin-top:3px;
+    margin-bottom:3px;
+}
+
+.animate-show-hide.ng-hide {
+  opacity: 0;
+}
+
+.animate-show-hide.ng-hide-add,
+.animate-show-hide.ng-hide-remove {
+  transition: all linear 0.2s;
+}
