--- a/www/views/formbuilder.html
+++ b/www/views/formbuilder.html
@@ -59,6 +59,9 @@
 				Records</button>
 		</div>
 
+		<!-- <div ui-sref="formbuilder"></div>
+		<div ui-sref="formviewer"></div> -->
+
 		<form id="viewBuilder" ng-if="generateViewBuilder==true" ng-submit="submitForm()" class="animate-show-hide"
 			novalidate>
 
