--- a/platforms/android/app/src/main/assets/www/views/header.html
+++ b/platforms/android/app/src/main/assets/www/views/header.html
@@ -4,14 +4,14 @@
 			<a href="#!" class="brand-logo">Builder</a>
 			<a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 			<ul class="right hide-on-med-and-down">
-				<li><a ui-sref="formbuilder">Builder</a></li>
-				<li><a ui-sref="formviewer">View</a></li>
+				<li><a ui-sref="home.formviewer">Builder</a></li>
+				<li><a ui-sref="generateform">View</a></li>
 			</ul>
 		</div>
 	</nav>
 
 	<ul class="sidenav" id="mobile">
-		<li><a ui-sref="formbuilder">Builder</a></li>
-		<li><a ui-sref="formviewer">View</a></li>
+		<li><a ui-sref="home.formviewer">Builder</a></li>
+		<li><a ui-sref="generateform">View</a></li>
 	</ul>
 </header>
