--- a/platforms/android/app/src/main/assets/www/views/formbuilder.html
+++ b/platforms/android/app/src/main/assets/www/views/formbuilder.html
@@ -52,17 +52,16 @@
 			</dialog>
 
 			<button type="submit" class="btn waves-effect">Add to Form View</button>
-			<button class="btn waves-effect" type="button" ng-click="generateViewBuilder=false">Clear Form View</button>
+			<button class="btn waves-effect" type="button" ng-click="hideViewBuilder()">Clear Form View</button>
 		</form>
 		<div class="button-container">
 			<button class="btn waves-effect delete-database" type="button" ng-click="clearDatabase()">Delete All
 				Records</button>
 		</div>
 
-		<!-- <div ui-sref="formbuilder"></div>
-		<div ui-sref="formviewer"></div> -->
+		<div ui-view></div>
 
-		<form id="viewBuilder" ng-if="generateViewBuilder==true" ng-submit="submitForm()" class="animate-show-hide"
+		<!-- <form id="viewBuilder" ng-if="generateViewBuilder==true" ng-submit="submitForm()" class="animate-show-hide"
 			novalidate>
 
 			<div class="input-field" ng-repeat="data in dbData" ng-switch on="data.Type">
@@ -75,6 +74,6 @@
 				<label for="{{data.Name}}">{{data.Name}}</label>
 			</div>
 			<button class="btn waves effect" type="submit">Submit</button>
-		</form>
+		</form> -->
 	</div>
 </div>
