--- a/platforms/android/app/src/main/assets/www/views/header.html
+++ b/platforms/android/app/src/main/assets/www/views/header.html
@@ -1,8 +1,8 @@
 <header>
 	<nav>
 		<div class="nav-wrapper">
-			<a href="#!" class="brand-logo">Builder</a>
-			<a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+			<a href="#!" class="brand-logo">Form Builder</a>
+			<a data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 			<ul class="right hide-on-med-and-down">
 				<li><a ui-sref="home.formviewer">Builder</a></li>
 				<li><a ui-sref="generateform">View</a></li>
